--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -1,13 +1,10 @@
 <p style="color: green"><%= notice %></p>
 
 <h1>Breweries</h1>
-
+<p>Number of breweries: <%= @breweries.count %></p>
 <div id="breweries">
   <% @breweries.each do |brewery| %>
     <%= render brewery %>
-    <p>
-      <%= link_to "Show this brewery", brewery %>
-    </p>
   <% end %>
 </div>
 
