--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -2,9 +2,20 @@
 
 <h1>Breweries</h1>
 <p>Number of breweries: <%= @breweries.count %></p>
+
 <div id="breweries">
   <% @breweries.each do |brewery| %>
-    <%= render brewery %>
+    <div id="<%= dom_id brewery %>">
+      <p>
+        <strong>Name:</strong>
+        <%= link_to brewery.name, brewery %>
+      </p>
+
+      <p>
+        <strong>Year:</strong>
+        <%= brewery.year %>
+      </p>
+    </div>
   <% end %>
 </div>
 
