--- a/app/views/breweries/_brewery.html.erb
+++ b/app/views/breweries/_brewery.html.erb
@@ -1,5 +1,10 @@
 <div id="<%= dom_id brewery %>">
-  <h2><%= @brewery.name %></h2>
-  <p>Established in: <%= @brewery.year %></p>
-  <p>Beers count: <%= @brewery.beers.count %></p>
+  <h2><%= brewery.name %></h2>
+  <p>Established in: <%= brewery.year %></p>
+  <p>Beers count: <%= brewery.beers.count %></p>
+  <p>
+    <% brewery.beers.each do |beer| %>
+      <%= link_to beer.name, beer %>
+    <% end %>
+  </p>
 </div>
