--- a/app/views/breweries/_brewery.html.erb
+++ b/app/views/breweries/_brewery.html.erb
@@ -7,4 +7,8 @@
       <%= link_to beer.name, beer %>
     <% end %>
   </p>
+
+  <p>
+    <%= link_to "List of all beers", beers_path %>
+  </p>
 </div>
