--- a/app/views/beers/_beer.html.erb
+++ b/app/views/beers/_beer.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id beer %>">
   <p>
     <strong>Name:</strong>
-    <%= beer.name %>
+    <%= link_to beer.name, beer %>
   </p>
 
   <p>
@@ -11,10 +11,8 @@
 
   <p>
     <strong>Brewery:</strong>
-    <%= beer.brewery_id %>
+    
+    <%= link_to beer.brewery.name, beer.brewery %>
   </p>
 
-  <p>
-    <%= link_to "List of all breweries", breweries_path %>
-  </p>
 </div>
