week2 ex3 and ex4

--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -2,6 +2,8 @@
 
 <ul>
   <% @ratings.each do |rating| %>
-    <li><%= rating %></li>
+    <li>
+      <%= render rating %>
+    </li>
   <% end %>
 </ul>
