--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -4,8 +4,9 @@
   <% @ratings.each do |rating| %>
     <li>
       <%= render rating %>
+      <%= button_to "delete", rating, method: :delete, form: { data: { "turbo-confirm": "Delete #{rating}?" } } %>
     </li>
   <% end %>
 </ul>
 
-<%= link_to "New Rate", ratings_new_path %>
+<%= link_to "New Rate", new_rating_path %>
